--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Uma plataforma de perguntas  e respostas",
   "main": "index.js",
   "scripts": {
+    "node": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ricardo Becker",
